Starter is working!
Starter is another maven project. To add dependency easily I added starter as module to main project.

Starter has interface EmailService.
It has autoconfiguration that can create EmailServiceDefaultImpl if there are no other implementations of EmailService. Otherwise, application ignore autoconfiguration(thanks to Conditionals) and use one and only implementation it has.

--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -9,6 +10,10 @@
         <version>2.7.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
+    <modules>
+        <module>mail-spring-boot-starter</module>
+    </modules>
 
     <groupId>com.ukma</groupId>
     <artifactId>spring-project</artifactId>
@@ -51,6 +56,11 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>com.ukma</groupId>
+            <artifactId>mail-spring-boot-starter</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
