--- a/pom.xml
+++ b/pom.xml
@@ -72,10 +72,10 @@
     <build>
         <resources>
             <resource>
-                <filtering>true</filtering>
-                <directory>src/main/resources</directory>
+                <directory>config</directory>
+                <targetPath>${project.build.outputDirectory}</targetPath>
                 <includes>
-                    <include>**/*.properties</include>
+                    <include>application.properties</include>
                 </includes>
             </resource>
         </resources>
