--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.jpa.database-platform=com.ukma.springproject.config.database.SQLiteDialect
+spring.jpa.hibernate.ddl-auto=update
 
+spring.datasource.url=jdbc:sqlite:dev-store.db
+spring.datasource.driver-class-name=org.sqlite.JDBC
+
+spring.datasource.username=user
+spring.datasource.password=password
+
+spring.jpa.show-sql=true
