--- a/config/application-dev.properties
+++ b/config/application-dev.properties
@@ -1,10 +1,13 @@
 spring.jpa.database-platform=com.ukma.springproject.config.database.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:sqlite:prod-store.db
+spring.datasource.url=jdbc:sqlite:dev-store.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 
 spring.datasource.username=user
 spring.datasource.password=password
 
 spring.jpa.show-sql=true
+
+
+mail.useDefaultMail=true
