--- a/config/application-dev.properties
+++ b/config/application-dev.properties
@@ -1,8 +1,8 @@
 spring.jpa.database-platform=com.ukma.springproject.config.database.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:sqlite:dev-store.db
-spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.datasource.url=jdbc:h2:file:./dev-store-h2.db
+spring.datasource.driver-class-name=org.h2.Driver
 
 spring.datasource.username=user
 spring.datasource.password=password
