--- a/config/application-dev.properties
+++ b/config/application-dev.properties
@@ -1,5 +1,5 @@
 spring.jpa.database-platform=com.ukma.springproject.config.database.SQLiteDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.datasource.url=jdbc:h2:file:./dev-store-h2.db
 spring.datasource.driver-class-name=org.h2.Driver
