add springdoc-openapi-ui dependency

--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,12 @@
             <version>2.7.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.12</version>
+        </dependency>
+
     </dependencies>
 
     <build>
