--- a/config/application-dev.properties
+++ b/config/application-dev.properties
@@ -1,7 +1,6 @@
-spring.jpa.database-platform=com.ukma.springproject.config.database.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 
-spring.datasource.url=jdbc:h2:file:./dev-store-h2.db
+spring.datasource.url=jdbc:h2:file:./dev-store-h2.db;AUTO_SERVER=true
 spring.datasource.driver-class-name=org.h2.Driver
 
 spring.datasource.username=user
