Extended email service and Fake email service
application.properties: mail.useRealEmail=false -> use EmailFakeServiceImpl, otherwise use EmailServiceImpl.

EmailServiceImpl send real emails, fake service print emails in console. We need fake because there is limit of 100 emails/day.
We should send emails only when needed.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,4 @@ spring.servlet.multipart.max-request-size = 15MB
 server.error.whitelabel.enabled=false
 
 mail.sendgrid.key=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
+mail.useRealEmail=false
